--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Educational platform",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack",
+    "build": "webpack --mode production",
     "dev": "webpack serve"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "@webpack-cli/serve": "^1.2.1",
     "autoprefixer": "^10.2.1",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
