--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "html-webpack-plugin": "^4.5.1",
     "htmlhint": "^0.14.2",
     "i": "^0.3.6",
+    "mini-css-extract-plugin": "^1.3.4",
     "npm": "^6.14.11",
+    "postcss-loader": "^4.1.0",
     "webpack": "^5.0.0-rc.6",
     "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.1",
